--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.0"
